--- a/mubei/jiaoyi/BuyIn/recharge.html
+++ b/mubei/jiaoyi/BuyIn/recharge.html
@@ -4,19 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <title>申诉</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-    <link href="../../css/mui.min.css" rel="stylesheet" />
+    <meta name="viewport"
+          content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
+    <link href="../../css/mui.min.css" rel="stylesheet"/>
     <script type="text/javascript" src="../../js/jquery.min.js"></script>
     <script type="text/javascript" src="../../js/back_icon.js"></script>
-    <script type="text/javascript" src="../../js/common.js" ></script>
-    <script type="text/javascript" src="../../js/change_lange.js" ></script>
-     <script>
-        	if(localStorage.pagecount == 1) {
-				addCssByLink('../../css/zh.css');
-			} else if(localStorage.pagecount == 2) {
-				addCssByLink('../../css/en.css');
-			}
-        </script>
+    <script type="text/javascript" src="../../js/common.js"></script>
+    <script type="text/javascript" src="../../js/change_lange.js"></script>
+    <script>
+        if (localStorage.pagecount == 1) {
+            addCssByLink('../../css/zh.css');
+        } else if (localStorage.pagecount == 2) {
+            addCssByLink('../../css/en.css');
+        }
+    </script>
     <style>
         .price {
             padding: 0.8em 1em;
@@ -35,6 +36,7 @@
             top: 30px;
             font-size: 14px;
         }
+
         .fileinput-button input {
             position: absolute;
             right: 0;
@@ -78,7 +80,8 @@
             border-radius: 0.7em;
             padding: 11px;
         }
-        .erweima{
+
+        .erweima {
             margin: auto;
             width: 200px;
             /*padding:0 2em;*/
@@ -92,20 +95,21 @@
 <header class="mui-bar mui-bar-nav" style="background-color: #ffffff;">
     <!--<i class="mui-icon mui-icon-left-nav mui-pull-left mui-action-back"></i>-->
     <h1 class="mui-title">申诉</h1>
-    <button class="mui-btn mui-btn-blue mui-btn-link mui-pull-right" style="color: #000000;font-size: 14px;" onclick="window.location.href='recharge_recode.html'; "><span class="language-chongzhijilu"></span></button>
+    <button class="mui-btn mui-btn-blue mui-btn-link mui-pull-right" style="color: #000000;font-size: 14px;"
+            onclick="window.location.href='recharge_recode.html'; "><span class="language-chongzhijilu"></span></button>
 </header>
 <div class="mui-content">
 
-    
+
     <div class="padded">
-       
+
         <div class="mui-input-row">
             <label>内容</label>
             <textarea id="textarea" rows="3" placeholder="请输入你的申诉内容"></textarea>
         </div>
         <div class="mui-input-row">
               <span class="fileinput-button"><span id="btn_uploadimg">上传图片</span>
-                  <input type="file" accept="image/*" id="image123" onchange="result123()" name="image123" />
+                  <input type="file" accept="image/*" id="image123" onchange="result123()" name="image123"/>
               </span>
             <div class="image_container" style="float: right;margin-right: 30%;">
                 <img id="preview" style="height:130px;width:117px;border-width:0px;"/>
@@ -116,19 +120,18 @@
 </div>
 
 
-
 <script type="text/javascript" src="../../js/mui.min.js"></script>
 <script type="text/javascript" src="../../js/url.js"></script>
 <script type="text/javascript">
 
 
-function getQueryString(name) {
-				var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)", "i");
-				var r = window.location.search.substr(1).match(reg);
-				if(r != null) return unescape(r[2]);
-				return null;
-			}
-   
+    function getQueryString(name) {
+        var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)", "i");
+        var r = window.location.search.substr(1).match(reg);
+        if (r != null) return unescape(r[2]);
+        return null;
+    }
+
     $("#image123").change(function () {
         var $file = $(this);
         var fileObj = $file[0];
@@ -152,7 +155,7 @@ function getQueryString(name) {
     });
 
 
-    function result123(){
+    function result123() {
         var fileInput = document.getElementById("image123");
         var file = fileInput.files[0];
         console.log(file);
@@ -162,37 +165,39 @@ function getQueryString(name) {
         var file1 = fileInput.files[0];
         console.log(file1);
         var formData = new FormData();
-        formData.append("image",file1);
-        formData.append("u_id",localStorage.lastname);
-        formData.append("s_id",getQueryString("sid"));
-        formData.append("text",$("#textarea").val());
-formData.append("user","123");
+        formData.append("image", file1);
+        formData.append("u_id", localStorage.lastname);
+        formData.append("s_id", getQueryString("sid"));
+        formData.append("text", $("#textarea").val());
+        formData.append("user", "123");
 
         if (!$("#textarea").val()) {
             mui.alert("请输入申诉内容");
-        } else  if(!file1) {
+        } else if (!file1) {
             mui.alert("请上传图片");
-        } else{
+        } else {
 
-                $.ajax({
-                    url: j_url + "/turnin/shenshu",
-                    data: formData,
-                    type: "POST",
-                    cache: false, //上传文件无需缓存
-                    jsonp:   "jsoncallback",
-                    processData: false, //用于对data参数进行序列化处理 这里必须false
-                    contentType: false, //必须
-                    crossDomain: true,
-                    complete: function (res) {
+            $.ajax({
+                url: j_url + "/turnin/shenshu",
+                data: formData,
+                type: "POST",
+                cache: false, //上传文件无需缓存
+                jsonp: "jsoncallback",
+                processData: false, //用于对data参数进行序列化处理 这里必须false
+                contentType: false, //必须
+                crossDomain: true,
+                complete: function (res) {
                     console.log(res);
-                        if(res.responseJSON.code == 2) {
-                            mui.alert(res.responseJSON.msg);
-                        } else if(res.responseJSON.code == 1) {
-                            mui.alert(res.responseJSON.msg);
-                            setTimeout(function(){window.location.reload() },800);
-                        }
+                    if (res.responseJSON.code == 2) {
+                        mui.alert(res.responseJSON.msg);
+                    } else if (res.responseJSON.code == 1) {
+                        mui.alert(res.responseJSON.msg);
+                        setTimeout(function () {
+                            window.location.reload()
+                        }, 800);
                     }
-                });
+                }
+            });
         }
 
     }
