--- a/mubei/jiaoyi/BuyOut/completed_order.html
+++ b/mubei/jiaoyi/BuyOut/completed_order.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />
-    <link href="../../css/mui.min.css" rel="stylesheet" />
-    <script type="text/javascript" src="../../js/jquery.min.js" ></script>
-<script type="text/javascript" src="../../js/common.js" ></script>
-    <script type="text/javascript" src="../../js/back_icon.js" ></script>
-    <script type="text/javascript" src="../../js/change_lange.js" ></script>
+    <meta name="viewport"
+          content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
+    <link href="../../css/mui.min.css" rel="stylesheet"/>
+    <script type="text/javascript" src="../../js/jquery.min.js"></script>
+    <script type="text/javascript" src="../../js/common.js"></script>
+    <script type="text/javascript" src="../../js/back_icon.js"></script>
+    <script type="text/javascript" src="../../js/change_lange.js"></script>
     <style>
         .mui-segmented-control {
             border: 1px solid #46adfc;
@@ -24,6 +25,7 @@
             color: #46adfc;
             border-color: inherit;
         }
+
         .table {
             margin-top: 8px;
             background-color: #FFFFFF;
@@ -31,14 +33,16 @@
             color: #000000;
             text-align: center;
         }
+
         .table td,
         .table th {
             border-bottom: 1px solid #d8d8d8;
             padding: 0.5em 0;
             /*width:25%;*/
         }
-        .table tr{
-            height:40px;
+
+        .table tr {
+            height: 40px;
         }
 
 
@@ -46,27 +50,30 @@
 </head>
 
 <body>
-	<script>
-			if(localStorage.pagecount == 1) {
-				addCssByLink('../../css/zh.css');
-			} else if(localStorage.pagecount == 2) {
-				addCssByLink('../../css/en.css');
-			}
-		</script>
-    <header class="mui-bar mui-bar-nav" style="background-color: #FFFFFF;">
-        <!--<i class="mui-icon mui-icon-left-nav mui-pull-left" onclick="window.location.href='../jiaoyi_t.html?tab=1'"></i>-->
-        <h1 class="mui-title"><span class="language-wancendan"></span></h1>
-    </header>
+<script>
+    if (localStorage.pagecount == 1) {
+        addCssByLink('../../css/zh.css');
+    } else if (localStorage.pagecount == 2) {
+        addCssByLink('../../css/en.css');
+    }
+</script>
+<header class="mui-bar mui-bar-nav" style="background-color: #FFFFFF;">
+    <!--<i class="mui-icon mui-icon-left-nav mui-pull-left" onclick="window.location.href='../jiaoyi_t.html?tab=1'"></i>-->
+    <h1 class="mui-title"><span class="language-wancendan"></span></h1>
+</header>
 <div class="mui-content">
     <div style="padding: 20px 20px;background-color: #FFFFFF;">
         <div id="segmentedControl" class="mui-segmented-control">
-            <a id="completed" class="mui-control-item mui-active" href="#item1"><span class="language-quedingduihuan9"></span></a>
+            <a id="completed" class="mui-control-item mui-active" href="#item1"><span
+                    class="language-quedingduihuan9"></span></a>
             <a id="complete" class="mui-control-item" href="#item2"><span class="language-quedingduihuan10"></span></a>
         </div>
     </div>
 
     <div id="item1" class="mui-control-content mui-active">
-          <p id="none1" style="font-size: 16px; margin: auto;width: 160px;margin-top: 20px; display: none;text-align: center;"><span class="language-meiyoujilu"></span></p>
+        <p id="none1"
+           style="font-size: 16px; margin: auto;width: 160px;margin-top: 20px; display: none;text-align: center;"><span
+                class="language-meiyoujilu"></span></p>
         <table class="table" width="100%">
             <tr>
                 <td><span class="language-maichuzhanghu"></span></td>
@@ -74,7 +81,7 @@
                 <td><span class="language-quedingduihuan5"></span></td>
                 <td><span class="language-quedingduihuan6"></span></td>
             </tr>
-          
+
             <tbody class="tbody">
             <!--<tr>
                 <td>123456</td>
@@ -89,11 +96,13 @@
                 <td>2018.03.15 10:10:10</td>
             </tr>-->
             </tbody>
-             
+
         </table>
     </div>
     <div id="item2" class="mui-control-content">
-        <p id="none2" style="font-size: 16px; margin: auto;width: 160px;margin-top: 20px; display: none;text-align: center;"><span class="language-meiyoujilu"></span></p>
+        <p id="none2"
+           style="font-size: 16px; margin: auto;width: 160px;margin-top: 20px; display: none;text-align: center;"><span
+                class="language-meiyoujilu"></span></p>
         <table class="table" width="100%">
 
             <tr>
@@ -121,97 +130,97 @@
 </div>
 </div>
 <script src="../../js/mui.min.js"></script>
-<script type="text/javascript" src="../../js/url.js" ></script>
+<script type="text/javascript" src="../../js/url.js"></script>
 
 <script type="text/javascript">
     mui.init()
     $.ajax({
-        url: j_url+"/index/result_order_s",
+        url: j_url + "/index/result_order_s",
         type: 'POST',
         dataType: 'jsonp',
         data: {
-            u_id:localStorage.lastname
+            u_id: localStorage.lastname
         },
         crossDomain: true,
-        success: function(res) {
+        success: function (res) {
             console.log(res);
-            if(res.code == 2) {
+            if (res.code == 2) {
                 $("#none1").show();
                 $(".table").hide();
-            } else if(res.code == 1) {
+            } else if (res.code == 1) {
                 $("#none2").hide();
                 $(".table").show();
                 var rou = res.data;
                 $('.tbody').empty();
-                for(var key in rou) {
+                for (var key in rou) {
                     $('.tbody').append("<tr style='height: 35px;'><td>" + rou[key].tel + "</td><td>" + rou[key].money + "</td> <td>已完成</td>" +
-                    "<td>"+ rou[key].time +  "</td> </tr>");
+                        "<td>" + rou[key].time + "</td> </tr>");
                 }
             }
         },
-        fail: function(res) {
+        fail: function (res) {
 
         }
     });
 
-    document.getElementById("completed").addEventListener('tap', function() {
+    document.getElementById("completed").addEventListener('tap', function () {
         $.ajax({
-            url: j_url+"/index/result_order_s",
+            url: j_url + "/index/result_order_s",
             type: 'POST',
             dataType: 'jsonp',
             data: {
-                u_id:localStorage.lastname
+                u_id: localStorage.lastname
             },
             crossDomain: true,
-            success: function(res) {
+            success: function (res) {
                 console.log(res);
-                if(res.code == 2) {
+                if (res.code == 2) {
                     $("#none1").show();
                     $(".table").hide();
-                } else if(res.code == 1) {
+                } else if (res.code == 1) {
                     $("#none2").hide();
                     $(".table").show();
                     $('.tbody').empty();
                     var rou = res.data;
-                    for(var key in rou) {
+                    for (var key in rou) {
                         $('.tbody').append("<tr style='height: 35px;'><td>" + rou[key].tel + "</td><td>" + rou[key].money + "</td> <td>已完成</td>" +
-                        "<td>"+ rou[key].time +  "</td> </tr>");
+                            "<td>" + rou[key].time + "</td> </tr>");
                     }
                 }
             },
-            fail: function(res) {
+            fail: function (res) {
 
             }
         });
     });
 
-    document.getElementById("complete").addEventListener('tap', function() {
+    document.getElementById("complete").addEventListener('tap', function () {
         $.ajax({
-            url: j_url+"/index/result_order_p",
+            url: j_url + "/index/result_order_p",
             type: 'POST',
             dataType: 'jsonp',
             data: {
-                u_id:localStorage.lastname
+                u_id: localStorage.lastname
             },
             crossDomain: true,
-            success: function(res) {
+            success: function (res) {
                 console.log(res);
-                if(res.code == 2) {
+                if (res.code == 2) {
                     $("#none2").show();
                     $(".table").hide();
-                } else if(res.code == 1) {
+                } else if (res.code == 1) {
                     $("#none2").hide();
                     $(".table").show();
                     var rou = res.data;
                     $('.tbody2').empty();
-                    for(var key in rou) {
-                        $('.tbody2').append("<tr style='height: 35px;'><td>" + rou[key].tel + "</td><td>" + rou[key].money + "</td> <td>"+rou[key].static+"</td>" +
-                        "<td>"+ rou[key].time +  "</td> </tr>");
+                    for (var key in rou) {
+                        $('.tbody2').append("<tr style='height: 35px;'><td>" + rou[key].tel + "</td><td>" + rou[key].money + "</td> <td>" + rou[key].static + "</td>" +
+                            "<td>" + rou[key].time + "</td> </tr>");
 
                     }
                 }
             },
-            fail: function(res) {
+            fail: function (res) {
 
             }
         });
